// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the correct addons when provided 1`] = `
.c0 {
  color: #444;
  display: flex;
  flex-flow: column wrap;
  margin-bottom: 25px;
}

.c0 >[role='group'] {
  margin-bottom: 0;
}

.c1 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: 18px;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c4 {
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  box-sizing: border-box;
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  color: #000;
  font-size: 1.125rem;
  font-family: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: normal;
  height: 2.2em;
  line-height: 1.428;
  min-width: 0;
  padding: 6px 12px;
  flex: 1;
}

.c4.c4 {
  outline: 0;
}

.c4::placeholder {
  color: #787878;
}

.c4:disabled,
.c4:disabled:read-only {
  background-color: #ededed;
  cursor: text;
  cursor: not-allowed;
}

.c2 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  box-sizing: border-box;
  display: flex;
  padding: 0!important;
}

.c2:focus-within {
  border-color: #83bffc;
  box-shadow: 0 0 8px rgba(102, 175, 233, 0.6),inset 0 0 0 0 rgba(0, 0, 0, 0);
}

.c2.c2::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
  font-size: 18px;
}

.c2.c2::before,
.c2.c2::after {
  background-color: #e4e4e4;
  color: #5e5e5e;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  line-height: 1;
  margin: 0;
  outline: 0;
  padding: 0.333em 0.6111em;
}

.c5 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  display: table-cell;
  appearance: none;
  width: 100%;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
}

.c5.c5:read-only {
  background-color: #ededed;
  cursor: text;
}

.c5.c5 {
  height: 2.2em;
  border: none!important;
  margin: 0!important;
}

.c5.c5:not([disabled], [readonly]) {
  background-color: transparent!important;
  box-shadow: none!important;
}

.c5.c5:focus {
  box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
}

@media (min-width: 768px) {
  .c1 {
    margin-right: 20px;
  }
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="test"
    >
      Text
    </label>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
      >
        <input
          type="hidden"
        />
        <i
          aria-hidden="true"
          class="c3 bds-icon bds-phone"
        />
      </div>
      <input
        class="c4 c5"
        id="test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`renders the correct addons when provided 2`] = `
.c0 {
  color: #444;
  display: flex;
  flex-flow: column wrap;
  margin-bottom: 25px;
}

.c0 >[role='group'] {
  margin-bottom: 0;
}

.c1 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: 18px;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c4 {
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  box-sizing: border-box;
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  color: #000;
  font-size: 1.125rem;
  font-family: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: normal;
  height: 2.2em;
  line-height: 1.428;
  min-width: 0;
  padding: 6px 12px;
  flex: 1;
}

.c4.c4 {
  outline: 0;
}

.c4::placeholder {
  color: #787878;
}

.c4:disabled,
.c4:disabled:read-only {
  background-color: #ededed;
  cursor: text;
  cursor: not-allowed;
}

.c2 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  box-sizing: border-box;
  display: flex;
  padding: 0!important;
}

.c2:focus-within {
  border-color: #83bffc;
  box-shadow: 0 0 8px rgba(102, 175, 233, 0.6),inset 0 0 0 0 rgba(0, 0, 0, 0);
}

.c2.c2::after {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
  font-size: 18px;
}

.c2.c2::before,
.c2.c2::after {
  background-color: #e4e4e4;
  color: #5e5e5e;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  line-height: 1;
  margin: 0;
  outline: 0;
  padding: 0.333em 0.6111em;
}

.c5 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  display: table-cell;
  appearance: none;
  width: 100%;
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5.c5:read-only {
  background-color: #ededed;
  cursor: text;
}

.c5.c5 {
  height: 2.2em;
  border: none!important;
  margin: 0!important;
}

.c5.c5:not([disabled], [readonly]) {
  background-color: transparent!important;
  box-shadow: none!important;
}

.c5.c5:focus {
  box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
}

@media (min-width: 768px) {
  .c1 {
    margin-right: 20px;
  }
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="test"
    >
      Text
    </label>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
      >
        <input
          type="hidden"
        />
        <i
          aria-hidden="true"
          class="c3 bds-icon bds-user"
        />
      </div>
      <input
        class="c4 c5"
        id="test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`renders the correct addons when provided 3`] = `
.c0 {
  color: #444;
  display: flex;
  flex-flow: column wrap;
  margin-bottom: 25px;
}

.c0 >[role='group'] {
  margin-bottom: 0;
}

.c1 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: 18px;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c4 {
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  box-sizing: border-box;
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  color: #000;
  font-size: 1.125rem;
  font-family: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: normal;
  height: 2.2em;
  line-height: 1.428;
  min-width: 0;
  padding: 6px 12px;
  flex: 1;
}

.c4.c4 {
  outline: 0;
}

.c4::placeholder {
  color: #787878;
}

.c4:disabled,
.c4:disabled:read-only {
  background-color: #ededed;
  cursor: text;
  cursor: not-allowed;
}

.c2 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  box-sizing: border-box;
  display: flex;
  padding: 0!important;
}

.c2:focus-within {
  border-color: #83bffc;
  box-shadow: 0 0 8px rgba(102, 175, 233, 0.6),inset 0 0 0 0 rgba(0, 0, 0, 0);
}

.c2.c2::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
  font-size: 18px;
}

.c2.c2::after {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  line-height: 1;
  text-transform: none;
  display: inline-block;
  font-size: inherit;
  text-decoration: none;
  vertical-align: text-bottom;
  font-size: 18px;
}

.c2.c2::before,
.c2.c2::after {
  background-color: #e4e4e4;
  color: #5e5e5e;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  line-height: 1;
  margin: 0;
  outline: 0;
  padding: 0.333em 0.6111em;
}

.c5 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  display: table-cell;
  appearance: none;
  width: 100%;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5.c5:read-only {
  background-color: #ededed;
  cursor: text;
}

.c5.c5 {
  height: 2.2em;
  border: none!important;
  margin: 0!important;
}

.c5.c5:not([disabled], [readonly]) {
  background-color: transparent!important;
  box-shadow: none!important;
}

.c5.c5:focus {
  box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
}

@media (min-width: 768px) {
  .c1 {
    margin-right: 20px;
  }
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="test"
    >
      Text
    </label>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
      >
        <input
          type="hidden"
        />
        <i
          aria-hidden="true"
          class="c3 bds-icon bds-phone"
        />
        <input
          type="hidden"
        />
        <i
          aria-hidden="true"
          class="c3 bds-icon bds-user"
        />
      </div>
      <input
        class="c4 c5"
        id="test"
        type="text"
      />
    </div>
  </div>
</div>
`;
